deploy: 97515e6d1dcde4f0d0d9abd078db97bcf8b4a329

--- a/jacoco/com.PoseidonCapitalSolutions.TradingApp.controller/CustomErrorController.java.html
+++ b/jacoco/com.PoseidonCapitalSolutions.TradingApp.controller/CustomErrorController.java.html
@@ -6,7 +6,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 
 
 @Controller
-<span class="nc" id="L9">public class CustomErrorController implements ErrorController {</span>
+<span class="fc" id="L9">public class CustomErrorController implements ErrorController {</span>
 
     @RequestMapping(&quot;/error&quot;)
     public String handleError() {
