--- a/jacoco/com.PoseidonCapitalSolutions.TradingApp.controller/LoginController.java.html
+++ b/jacoco/com.PoseidonCapitalSolutions.TradingApp.controller/LoginController.java.html
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>LoginController.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">TradingApp</a> &gt; <a href="index.source.html" class="el_package">com.PoseidonCapitalSolutions.TradingApp.controller</a> &gt; <span class="el_source">LoginController.java</span></div><h1>LoginController.java</h1><pre class="source lang-java linenums">package com.PoseidonCapitalSolutions.TradingApp.controller;
 
-import com.PoseidonCapitalSolutions.TradingApp.repositorie.UserRepository;
+import com.PoseidonCapitalSolutions.TradingApp.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
@@ -18,10 +17,10 @@ public class LoginController {
     @GetMapping(&quot;/login&quot;)
     public String loginPage(Authentication authentication) {
 
-<span class="nc bnc" id="L21" title="All 4 branches missed.">        if (authentication != null &amp;&amp; authentication.isAuthenticated()) {</span>
-<span class="nc" id="L22">            return &quot;redirect:/bidList/list&quot;;</span>
+<span class="nc bnc" id="L20" title="All 4 branches missed.">        if (authentication != null &amp;&amp; authentication.isAuthenticated()) {</span>
+<span class="nc" id="L21">            return &quot;redirect:/bidList/list&quot;;</span>
         }
-<span class="nc" id="L24">        return &quot;login&quot;;</span>
+<span class="nc" id="L23">        return &quot;login&quot;;</span>
     }
 
 }
